- Fix fade-out transition between pages. - Minor adjustments on credits page. - Break long links on mobile in imprint page.

--- a/credits/css/credits.css
+++ b/credits/css/credits.css
@@ -33,15 +33,12 @@ body {
 
 @media screen and (max-width: 768px) {
     .name {
-        margin: 180px 0 0 100px;
-    }
-
-    .socials {
-        margin: 20px 0 0 100px;
+        margin: 180px 0 0 60px;
     }
 
     .credits {
-        margin: 20px 0 0 100px;
+        margin: 20px 20px 0 60px;
+        text-align: justify;
     }
 
     .credit-link {
